Fix content not being visible on the page

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
     font-family: adobe-clean, -apple-system, BlinkMacSystemFont, Segoe UI,Roboto, sans-serif;
 }
 
-.plain--theme {
+.tutorial--theme {
     opacity: 1;
 }
 
